feat(style): add hero section
Added a hero text and a decorative image
Polished code by adding comments

--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,20 @@
 *, *::before, *::after {
     box-sizing: border-box;
-}
-
-body {
-    font-family: Roboto, Georgia, 'Times New Roman', Times, serif;
 
     margin: 0;
     padding: 0;
 }
 
+body {
+    font-family: Roboto, Georgia, 'Times New Roman', Times, serif;
+}
+
 /* RESET ABOVE */
 
 /*  */
-/* First Section - Hero */
+/* Styling the Navigation bar */
 
-/* Setting up the top bar body */
+/* Setting up the body */
 .topbar {
     background-color: #1F2937;
     color: #F9FAF8;
@@ -23,7 +23,7 @@ body {
     justify-content: space-around;
     align-items: center;
 
-    padding: 0 64px;
+    padding: 15px 64px;
 }
 
 /* Reset anchors */
@@ -46,4 +46,72 @@ body {
 .logo {
     font-family: 'Times New Roman', Times, serif;
     font-size: 32px;
+}
+
+/*  */
+/* First Section - Hero */
+
+/* Align elements */
+.hero-section {
+    background-color: #1F2937;
+    padding: 64px;
+    color: #F9FAF8;
+
+    display: flex;
+    justify-content: space-evenly;
+    gap: 48px;
+}
+
+/* Prevent overflowing */
+.hero-text {
+    max-width: 640px;
+}
+
+/* Resize the hero header */
+.hero-text > .header {
+    font-size: 48px;
+    font-weight: 900;
+    margin-bottom: 5px;
+}
+
+/* Style the subheader */
+.hero-text > .subheader {
+    font-size: 36px;
+    color: #cccccc;
+    margin-bottom: 16px;
+}
+
+/* Modify the paragraph */
+.hero-text > .para {
+    font-size: 18px;
+    color: #E5E7EB;
+    margin: 8px 0;
+}
+
+/* Makes the button look awesome */
+.hero-text > .btn {
+    margin: 16px 0;
+    font-size: 18px;
+    font-weight: 700;
+    
+    background-color: #3882F6;
+    color: white;
+
+    border: none;
+    padding: 8px 48px;
+    border-radius: 10px
+}
+
+/* Unique styling to flower span */
+#flower {
+    background-color: #ffffff23;
+    color: rgb(269, 169, 69);
+    font-style: italic;
+    margin-right: 4px;
+}
+
+/* Secret, shh!! */
+.rickroll-link {
+    color: #a7b8d8;
+    font-size: 1.1em;
 }
