--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ button {
 /* Prevent overflowing */
 .hero-text {
     max-width: 640px;
+    flex: 1 0 320px;
 }
 
 /* Resize the hero header */
@@ -138,6 +139,12 @@ button {
 .hero-img {
     border: 5px dotted #3882F6;
     border-radius: 45px;
+
+    width: 400px;
+    max-width: 100%;
+    height: auto;
+
+    flex: 0 3 auto;
 }
 
 /* Makes credits vertical by default */
@@ -180,11 +187,13 @@ button {
     display: flex;
     justify-content: space-evenly;
     padding: 64px;
+    flex-wrap: wrap;
 }
 
 /* Have a little of margin preventing overlapping */
 .card {
     margin: 12px;
+    /* margin-right: auto; */
 }
 
 /* Make the text fit in the card */
