--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: Roboto, Georgia, 'Times New Roman', Times, serif;
+    font-family: Roboto, Georgia, 'Times New Roman', Times, sans-serif;
 }
 
 button {
@@ -69,6 +69,8 @@ button {
     font-size: 32px;
 }
 
+
+
 /*  */
 /* First Section - Hero */
 
@@ -79,8 +81,11 @@ button {
     color: #F9FAF8;
 
     display: flex;
+    align-items: center;
     justify-content: space-evenly;
     gap: 48px;
+
+    min-height: 600px;
 }
 
 /* Generic style for links */
@@ -164,6 +169,7 @@ button {
 }
 
 
+
 /*  */
 /* Second Section - Cards */
 
@@ -172,6 +178,8 @@ button {
     background-color: #F9FAF8;
     color: #1F2937;
     padding: 64px;
+
+    min-height: 600px;
 }
 
 /* Style the 2nd section header */
@@ -207,4 +215,35 @@ button {
     border: 4px solid #545455;
     border-radius: 18px;
     object-fit: cover; /* Prevent stretching images */
+}
+
+
+
+/*  */
+/* Third Section - Quote */
+
+.quote-section {
+    background-color: #E5E7EB;
+    padding: 128px;
+    color: #1F2937;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    min-height: 600px;
+}
+
+.big-quote-text {
+    font-size: 36px;
+    font-weight: 300;
+    max-width: 1200px;
+
+    font-style: italic;
+}
+
+.quote-author {
+    font-size: 24px;
+    text-align: right;
+    margin: 25px 105px;
 }
