fix(style): modify quote author structure
Modified the HTML element controlling the quote author by removing it
Merged it instead with the quote text as a span to make the position
persistent. Instead of flex, use text-align.

Thus, modified the CSS to adjust the changes for a span.
The text style has also improved.

--- a/styles.css
+++ b/styles.css
@@ -247,10 +247,15 @@ button {
 
 /* Emphasize the author */
 .quote-author {
-    align-self: flex-end;
+    display: block;
+
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+    font-weight: 300;
+
     font-size: 24px;
     text-align: right;
-    margin: 25px 105px;
+    margin: 25px 65px;
 }
 
 
