fix(css): improve banner flexibility
Made the banner wrap after a certain level
Limited the text to expand more than the maximum
All of this exploting flexbox features

--- a/styles.css
+++ b/styles.css
@@ -285,10 +285,18 @@ button {
     border-radius: 8px;
     padding: 45px 35px;
 
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 
     gap: 36px;
+
+    /* Let the button move down if there is not enough space */
+    flex-flow: row wrap;
+}
+
+.banner-content {
+    flex: 1 0 540px;
+    max-width: 680px;
 }
 
 /* Banner title */
@@ -300,7 +308,6 @@ button {
 /* Little text */
 .banner-description {
     font-size: 22px;
-    max-width: 640px;
 }
 
 /* The banner button */
